--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
       <div class="button-container">
         <!-- TODO: Hier neue Buttons erstellen. -->
+        <button type="button" data-click="aufgabe07">Aufgabe 7</button>
         <button type="button" data-click="aufgabe06">Aufgabe 6</button>
         <button type="button" data-click="aufgabe05">Aufgabe 5</button>
         <button type="button" data-click="aufgabe04">Aufgabe 4</button>
