--- a/index.html
+++ b/index.html
@@ -22,6 +22,17 @@
 
       <div class="button-container">
         <!-- TODO: Hier neue Buttons erstellen. -->
+        <button type="button" data-click="aufgabe28">Aufgabe 28</button>
+        <button type="button" data-click="aufgabe27">Aufgabe 27</button>
+        <button type="button" data-click="aufgabe26">Aufgabe 26</button>
+        <button type="button" data-click="aufgabe25">Aufgabe 25</button>
+        <button type="button" data-click="aufgabe24">Aufgabe 24</button>
+        <button type="button" data-click="aufgabe23">Aufgabe 23</button>
+        <button type="button" data-click="aufgabe22">Aufgabe 22</button>
+        <button type="button" data-click="aufgabe21">Aufgabe 21</button>
+        <button type="button" data-click="aufgabe20">Aufgabe 20</button>
+        <button type="button" data-click="aufgabe19">Aufgabe 19</button>
+        <button type="button" data-click="aufgabe18">Aufgabe 18</button>
         <button type="button" data-click="aufgabe17">Aufgabe 17</button>
         <button type="button" data-click="aufgabe16">Aufgabe 16</button>
         <button type="button" data-click="aufgabe15">Aufgabe 15</button>
