--- a/index.html
+++ b/index.html
@@ -22,9 +22,12 @@
 
       <div class="button-container">
         <!-- TODO: Hier neue Buttons erstellen. -->
-        <button type="button" data-click="aufgabe28">Aufgabe 28</button>
-        <button type="button" data-click="aufgabe27">Aufgabe 27</button>
-        <button type="button" data-click="aufgabe26">Aufgabe 26</button>
+        <button type="button" data-click="eigeneaufgabe2">
+          Eigene Aufgabe 2
+        </button>
+        <button type="button" data-click="eigeneaufgabe1">
+          Eigene Aufgabe 1
+        </button>
         <button type="button" data-click="aufgabe25">Aufgabe 25</button>
         <button type="button" data-click="aufgabe24">Aufgabe 24</button>
         <button type="button" data-click="aufgabe23">Aufgabe 23</button>
