--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
 
       <div class="button-container">
         <!-- TODO: Hier neue Buttons erstellen. -->
+        <button type="button" data-click="CountingSort">Counting Sort</button>
         <button type="button" data-click="BubbleSort">Bubble Sort</button>
         <button type="button" data-click="selectionSort">Selection Sort</button>
         <button type="button" data-click="eigeneaufgabe2">
