--- a/index.html
+++ b/index.html
@@ -60,7 +60,16 @@
 
       <section>
         <h2>Sortierverfahren</h2>
-        <!-- TODO: Schreiben Sie hier zu Sortierverfahren-->
+        <!-- TODO: Schreiben Sie hier zu Sortierverfahren
+        Selectionsort,
+        hier werden die Elementen ihren ASCII wert verglichen, kleinste ASCII wert wird dann zuforderst gesetzt, dann werden alle wieder verglichen. buchstabe werden automatisch verglichen und zahlen werden sie mit der wert des nächsten Elements verglichen. Am schluss geht es von der kleinsten zu der grössten.
+
+        Bubblesort,
+        hier geht es gleich nach einfach der grösste Element ist zuforderst und zahlen und buchstaben werden automatisch verglichen.
+
+
+        counting sort,zuerst wird überprüft wie oft jedes Element vorkommt, die anzahl der vorkommen wird in einem array gespeichert und dann sortiert. Jeder buchstabe kommt so oft vor wie bei der eingabe und wird am schluss wieder nach den ASCII werten sortiert
+        -->
       </section>
     </div>
 
